# mids-203-section3

./: README.md  lab_2.Rproj  pyproject.toml
LS10/: LS10_Rcode_Spring_2025_DataSci_203.R
LS2/: LS2_Code_Week_2_Spring_2025_DataSci_203.R
LS6/: LS6_RCode_Spring_2025_DataSci_203.R
data_nba/: combine_and_split_data.py  confirmatory.csv  data_pipeline_dags.md  eda.csv  eda_plan.md  nba_2022-23_all_stats_with_salary.csv  nba_2023_all_star_team.csv  nba_2023_combined.csv  nba_market_size.csv  nba_rosters_2023.csv  nba_rosters_2023_traded_players.csv  scraper.py
notebooks/analysis_lab2_html/: lab2_report_html.Rmd  lab2_report_html.html
notebooks/analysis_lab2_short/: analysis_workflow.md  lab2_report_short.Rmd  lab2_report_short.tex
notes_from_mark/LS4/: LS4_RCode_Datasaurus_Spring_2025_DataSci_203.R
notes_from_mark/LS5/: LS5_RCode_Spring_2025_DataSci_203.R
notes_from_mark/LS7/: LS7_Rcode_MultiGroup_Spring_2025_DataSci_203.R
notes_from_mark/LS8/: LS8_Rcode_Boston_House_Regression_Spring_2025_DataSci_203.R
notes_from_mark/LS9/: LS9_Rcode_Spring_2025_DataSci_203.R
