[tool.poetry]
name = "lab-2-pacific-boys-1"
version = "0.1.0"
description = ""
authors = ["David Lin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pandas = "^2.2.3"
lxml = "^5.3.2"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
